# 90s-homepage

./: Cargo.toml  README.md  config.toml  notes.md
.github/workflows/: rust.yml
src/: app.rs  db.rs  logger.rs  main.rs  misc.rs  serve_static.rs  stats.rs
src/pages/: guest_book.rs  mod.rs  stats.rs
src/sql/: create_guestbook.sql  create_stats.sql
templates/: guestbook.html
web/: about.html  example.html  index.html  lessons.html
web/static/: example.html  index.html  lessons.html
web/static/assets/: Thumbs.db
web/static/style/: common.css
web/style/: common.css  common.css.map  common.scss
web/templates/: stats.html
