[package]
name = "homepage"
version = "0.1.0"
edition = "2021"

[dependencies]
afire = { version = "2.1.0", features = ["extensions", "tracing"] }
askama = "0.12.0"
ctrlc = "3.2.5"
owo-colors = "3.5.0"
parking_lot = "0.12.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.159", features = ["derive"] }
toml = "0.7.3"
